--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,28 +1,16 @@
-#<-----stage1--------->
-FROM node:18-alpine AS builder
+FROM node:18-alpine
 
 WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm ci
+RUN npm install
 
 COPY . .
 
 RUN npm run build
 
-#<------stage2----->
-FROM node:18-alpine
-
-RUN npm install -g serve
-
-COPY --from=builder /app/build /build
-
-RUN adduser -S appuser
-
-USER appuser
-
-
 EXPOSE 3000
 
-CMD ["serve","-s","/build"]
+CMD ["npx","serve","-s","build"]
+
