--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,2 @@
-MONGO_INITDB_ROOT_USERNAME=admin
-MONGO_INITDB_ROOT_PASSWORD=securepass
-MONGO_URI=mongodb://admin:securepass@mongo-service.database.svc.cluster.local:27017/?authSource=admin&replicaSet=rs0
+MONGO_URI=mongodb+srv://shahzaibjahan41_db_user:tmCXHodxWs51c5kE@cluster0.y7aruul.mongodb.net/?appName=Cluster0
 
